Dependencies & resource copying

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ sourceSets {
         java {
             srcDirs = ['de/nmichael/efa']
         }
+        resources {
+            srcDirs = []
+        }
     }
 }
 
@@ -16,8 +19,17 @@ repositories {
 
 dependencies {
     compile files('libs/jsuntimes-1.0.jar')
+    compile files('libs/edtftpj.jar')
     compile 'javax.help:javahelp:2.0.05'
     compile 'org.apache.xmlgraphics:fop:2.3'
     compile 'javax.mail:javax.mail-api:1.6.2'
     compile 'com.sun.mail:javax.mail:1.6.2'
+    compile 'oauth.signpost:signpost-core:1.2.1.2'
+}
+
+jar {
+    from('de/nmichael/efa') {
+        excludes = ['*.java']
+        into('de/nmichael/efa')
+    }
 }
