--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 sourceSets {
     main {
         java {
-            srcDirs = ['de/nmichael/efa']
+            srcDirs = [projectDir]
         }
         resources {
             srcDirs = []
