--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'application'
     id 'java'
 }
 
@@ -30,6 +31,32 @@ jar {
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+}
+
+application {
+    mainClass = 'de.nmichael.efa.base.Main'
+}
+
+applicationDistribution.with {
+    from("root/")
+    from("cfg/") {
+        into "cfg"
+    }
+    from("help/main") {
+        into "doc"
+    }
+    from("${projectDir}") {
+        include "*.properties", "*.sec"
+        into "program"
+    }
+    from("${buildDir}/libs") {
+        include "*.jar"
+        into "program"
+    }
+    from("plugins") {
+        include "**/*.jar"
+        into "program/plugins"
+    }
 }
 
 task distribution(type: Zip) {
